添加举报和打赏弹窗

--- a/YT/manifest.json
+++ b/YT/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "tools/AddCont.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "postDetail.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -188,6 +188,96 @@
 					"xxhdpi": ""
 				}
 			}
+		}
+	},
+	"dependencies": {
+		"pages": {
+			"voteDetail.html": {
+				"resources": [
+					"images/sex_02_age.png",
+					"images/user.png",
+					"images/good.png",
+					"images/star.png",
+					"fonts/mui.ttf",
+					"images/tag_yuanlao.png",
+					"images/selected.png",
+					"css/mui.css",
+					"images/good_black.png",
+					"images/menu_points.png",
+					"js/mui.min.js",
+					"css/app.css",
+					"images/vertical_points.png",
+					"images/graphic.png",
+					"images/gender.png",
+					"images/icon_triangle.png",
+					"images/dr.png",
+					"images/close.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"postDetail.html": {
+				"resources": [
+					"images/sex_02_age.png",
+					"images/user.png",
+					"images/prture.png",
+					"images/good.png",
+					"images/star.png",
+					"fonts/mui.ttf",
+					"images/tag_yuanlao.png",
+					"css/mui.css",
+					"images/heart.png",
+					"images/menu_points.png",
+					"js/mui.min.js",
+					"css/app.css",
+					"images/vertical_points.png",
+					"images/gender.png",
+					"images/icon_triangle.png",
+					"images/dr.png",
+					"js/touch.js",
+					"js/zepto.min.js",
+					"images/close.png"
+				],
+				"refer": [],
+				"priority": 0
+			}
+		},
+		"idle": {
+			"resources": [
+				"css/cropper.css",
+				"images/jinghua.png",
+				"images/x.png",
+				"login.html",
+				"images/area.png",
+				"images/nav_04.png",
+				"register.html",
+				"css/cropper.min.css",
+				"js/common.js",
+				"images/pic_3.png",
+				"images/good_hover.png",
+				"images/pic_2.png",
+				"upload.html",
+				"js/mui.js",
+				"images/sex_01_age.png",
+				"froumCont.html",
+				"js/jquery.min.js",
+				"images/clearInput.png",
+				"images/tou_1.png",
+				"js/cropper.js",
+				"images/nav_02.png",
+				"images/banner_01.jpg",
+				"images/nav_03.png",
+				"images/nav_01.png",
+				"images/yan.png",
+				"images/pic_1.png",
+				"images/nav_01_active.png",
+				"index.html",
+				"tools/AddCont.html",
+				"resPwd.html",
+				"images/msg.png",
+				"images/logoM.png",
+				"js/cropper.min.js"
+			]
 		}
 	}
 }
