--- a/YT/manifest.json
+++ b/YT/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "voteDetail.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "postDetail.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -211,7 +211,12 @@
 					"images/gender.png",
 					"images/icon_triangle.png",
 					"images/dr.png",
-					"images/close.png"
+					"images/close.png",
+					"js/touch.js",
+					"images/good_hover.png",
+					"js/zepto.min.js",
+					"js/layer.js",
+					"css/layer.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -254,7 +259,6 @@
 				"css/cropper.min.css",
 				"js/common.js",
 				"images/pic_3.png",
-				"images/good_hover.png",
 				"images/pic_2.png",
 				"upload.html",
 				"js/mui.js",
