--- a/YT/manifest.json
+++ b/YT/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "postDetail.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "tools/releastVote.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -241,7 +241,58 @@
 					"images/dr.png",
 					"js/touch.js",
 					"js/zepto.min.js",
-					"images/close.png"
+					"images/close.png",
+					"css/layer.css",
+					"images/good_hover.png",
+					"js/layer.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"tools/AddCont.html": {
+				"resources": [
+					"css/app.css",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"images/clearInput.png",
+					"css/mui.css",
+					"images/location.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"tools/releaseContent.html": {
+				"resources": [
+					"css/app.css",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"images/clearInput.png",
+					"images/location.png",
+					"css/mui.css",
+					"images/imgs.png",
+					"images/emoji.png",
+					"js/zepto.min.js",
+					"js/touch.js",
+					"css/layer.css",
+					"js/layer.js",
+					"images/location_on.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"tools/releastVote.html": {
+				"resources": [
+					"css/app.css",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"images/clearInput.png",
+					"images/location.png",
+					"css/mui.css",
+					"js/zepto.min.js",
+					"js/layer.js",
+					"js/touch.js",
+					"css/layer.css",
+					"images/location_on.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -265,7 +316,6 @@
 				"images/sex_01_age.png",
 				"froumCont.html",
 				"js/jquery.min.js",
-				"images/clearInput.png",
 				"images/tou_1.png",
 				"js/cropper.js",
 				"images/nav_02.png",
@@ -276,7 +326,6 @@
 				"images/pic_1.png",
 				"images/nav_01_active.png",
 				"index.html",
-				"tools/AddCont.html",
 				"resPwd.html",
 				"images/msg.png",
 				"images/logoM.png",
