调整发布帖子和投票

--- a/YT/manifest.json
+++ b/YT/manifest.json
@@ -275,7 +275,8 @@
 					"js/touch.js",
 					"css/layer.css",
 					"js/layer.js",
-					"images/location_on.png"
+					"images/location_on.png",
+					"images/close.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -292,7 +293,8 @@
 					"js/layer.js",
 					"js/touch.js",
 					"css/layer.css",
-					"images/location_on.png"
+					"images/location_on.png",
+					"images/close.png"
 				],
 				"refer": [],
 				"priority": 0
