--- a/YT/manifest.json
+++ b/YT/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "tools/releastVote.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "others-profile.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -298,21 +298,71 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"profile.html": {
+				"resources": [
+					"images/sex_02_age.png",
+					"images/user.png",
+					"images/x.png",
+					"images/jinghua.png",
+					"fonts/mui.ttf",
+					"images/tag_yuanlao.png",
+					"images/nav_02.png",
+					"css/mui.css",
+					"images/banner_01.jpg",
+					"images/nav_03.png",
+					"images/nav_01.png",
+					"images/area.png",
+					"images/nav_04.png",
+					"images/yan.png",
+					"images/pic_1.png",
+					"images/pic_3.png",
+					"js/mui.min.js",
+					"css/app.css",
+					"images/pic_2.png",
+					"images/msg.png",
+					"images/profile_bg.png",
+					"images/avatar.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"others-profile.html": {
+				"resources": [
+					"images/sex_02_age.png",
+					"images/user.png",
+					"images/x.png",
+					"images/jinghua.png",
+					"fonts/mui.ttf",
+					"images/tag_yuanlao.png",
+					"images/nav_02.png",
+					"css/mui.css",
+					"images/banner_01.jpg",
+					"images/nav_03.png",
+					"images/nav_01.png",
+					"images/area.png",
+					"images/nav_04.png",
+					"images/yan.png",
+					"images/pic_1.png",
+					"images/pic_3.png",
+					"js/mui.min.js",
+					"css/app.css",
+					"images/pic_2.png",
+					"images/msg.png",
+					"images/bg.png",
+					"images/1.png"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
 			"resources": [
 				"css/cropper.css",
-				"images/jinghua.png",
-				"images/x.png",
 				"login.html",
-				"images/area.png",
-				"images/nav_04.png",
 				"register.html",
 				"css/cropper.min.css",
 				"js/common.js",
-				"images/pic_3.png",
-				"images/pic_2.png",
 				"upload.html",
 				"js/mui.js",
 				"images/sex_01_age.png",
@@ -320,16 +370,9 @@
 				"js/jquery.min.js",
 				"images/tou_1.png",
 				"js/cropper.js",
-				"images/nav_02.png",
-				"images/banner_01.jpg",
-				"images/nav_03.png",
-				"images/nav_01.png",
-				"images/yan.png",
-				"images/pic_1.png",
 				"images/nav_01_active.png",
 				"index.html",
 				"resPwd.html",
-				"images/msg.png",
 				"images/logoM.png",
 				"js/cropper.min.js"
 			]
