--- a/YT/manifest.json
+++ b/YT/manifest.json
@@ -10,7 +10,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "others-profile.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "messages.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -368,6 +368,34 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"circle.html": {
+				"resources": [
+					"images/sex_02_age.png",
+					"images/user.png",
+					"images/x.png",
+					"images/jinghua.png",
+					"fonts/mui.ttf",
+					"images/tag_yuanlao.png",
+					"images/nav_02.png",
+					"css/mui.css",
+					"images/banner_01.jpg",
+					"images/nav_03.png",
+					"images/nav_01.png",
+					"images/area.png",
+					"images/nav_04.png",
+					"images/yan.png",
+					"images/pic_1.png",
+					"images/pic_3.png",
+					"js/mui.min.js",
+					"css/app.css",
+					"images/pic_2.png",
+					"images/msg.png",
+					"images/prture.png",
+					"images/tou_1.png"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
@@ -381,7 +409,6 @@
 				"js/mui.js",
 				"images/sex_01_age.png",
 				"froumCont.html",
-				"images/tou_1.png",
 				"js/cropper.js",
 				"images/nav_01_active.png",
 				"index.html",
